components/layout/header-style.module.css
.header{
    left: 0px;
    top: 0px;
    width: 100%;
    height: 17vh;
    border-bottom: solid 2px #42404E;
}

.header > * {
    width: 100%;
    display: flex;
    flex-direction: row;
}

.topArea{
    height: 70%;
    background-color: #565e75;
    align-items: center;
    font-size: larger;
}

.topArea > * {
    text-align: center;
}

.lowerArea{
    height: 30%;
    background-color: #ced9e2;
}

.header > * > *{
    flex: 1 1 100%;
}

.logInInformation{
    font-family: "Lucida Handwriting";
    overflow: hidden;
    width: 30%;
    color: black;
    font-size: small;
    text-overflow: ellipsis;
}

.logInInformation > * {
    margin: 1vh 1vw 1vh 1vw;
}

.logoContainer{
}

.linkContainer{
    display: flex;
    flex-direction: row;
    text-align: center;
    margin-left: 50vw;
}

.linkContainer *{
    background: none;
    margin: auto;
    height: 80%;
    font-size: large;
    width: 100%;
    border: none;
    cursor: pointer;
    border-radius: 10px;
    text-indent: 0;
    line-height: normal;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    display: inline-block;
    margin: auto 1vw auto 1vw;
    color: #42404E;
    text-align: center;
    align-content: center;
    text-decoration: none;
    word-spacing: normal;
    flex: 1 1 0;
    transition: 0.35s;
}

.linkContainer *:hover, .selected{
    background-color: #8e99a2;
    transform: scale(1.05);
    color: black;
}

.hamburgerButton{
    cursor: pointer;
    display: none;
    flex: 1 2 30vw;
    min-width: 10vw;
    text-align: center;
    align-content: center;
    transition: 0.35s;
    border: none;
    background: none;
}

.hamburgerButton:hover, .hamburgerButtonOpen, .hamburgerContainer *:hover, .aboutLink:hover{
    background-color: #8e99a2;
    color: black;
}

.hamburgerButton::before{
    content: "☰";
}

.hamburgerContainer{
    display: flex;
    flex-direction: column;
    top: 10vh;
    width: 100%;
    background: #ced9e2;
    display: none;
    border-bottom: solid 1px #42404E;
}

.hamburgerContainer *{
    text-align: center;
    text-decoration: none;
    color: #42404E;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: normal;
    padding-top: 2vh;
    padding-bottom: 2vh;
}

.showContents{
    display: flex;
}

.aboutContainer{
    position: absolute;
    border: solid #42404E 2px;
    background-color: #ced9e2;
    top: 0vh;
    min-width: 20vw;
    text-align: center;
    align-items: center;
    min-height: fit-content;
    font-size: larger;
    display: none;
    transition: 0.35s;
    overflow: hidden;
    right: 0px;
    top: 17vh;
}

.aboutLink{
    background: none;
    height: 50%;
    font-size: normal;
    width: 100%;
    border: none;
    cursor: pointer;
    text-indent: 0;
    line-height: normal;
    display: block;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #42404E;
    text-align: center;
    align-content: center;
    text-decoration: none;
    word-spacing: normal;
    transition: 0.35s;
}

@media screen and (max-width: 700px){
    .linkContainer{
        display: none;
    }
    .hamburgerButton{
        display: inline-block;
    }
}

